tests/rosetta/out/Fortran/catalan-numbers-2.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program catalan_numbers_2
  implicit none
    integer :: t1
    integer :: t2
    integer :: t3
    integer :: t5
    integer :: i
      character(len=100) :: s0
  call main()
  
  contains
  recursive integer function catalanRec(n) result(res)
    integer, intent(in) :: n
    if ((n == 0)) then
      res = 1
      return
    end if
    t1 = (2 * n)
    t2 = (t1 - 1)
    t3 = (2 * t2)
    t5 = (t3 * catalanRec((n - 1)))
    res = int(((t5 / ((n + 1)))))
    return
  end function catalanRec
  recursive subroutine main()
    do i = 1, 16
      write(s0,'(G0)') catalanRec(i)
      print *, s0
    end do
  end subroutine main
end program catalan_numbers_2
